openshift/kustomize/elastic/base/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elastic
  namespace: default
  annotations:
    description: Deploy Elasticsearch cluster
  labels:
    name: elastic
    part-of: tno
    version: 1.0.0
    component: elastic
    managed-by: kustomize
    created-by: jeremy.foster
    cluster: elastic-cluster
spec:
  serviceName: elastic-headless
  replicas: 3
  podManagementPolicy: Parallel
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      statefulset: elastic-cluster
  template:
    metadata:
      labels:
        part-of: tno
        component: elastic
        statefulset: elastic-cluster
    spec:
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccountName: tno
      # Give Elasticsearch time to shut down cleanly.
      terminationGracePeriodSeconds: 120
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: statefulset
                    operator: In
                    values:
                      - elastic-cluster
              topologyKey: "kubernetes.io/hostname"
      volumes:
        - name: config
          configMap:
            name: elastic
            items:
              - key: elasticsearch.yml
                path: elasticsearch.yml
        # - name: backup
        #   persistentVolumeClaim:
        #     claimName: tno-database-backup
      containers:
        - name: elastic
          image: docker.elastic.co/elasticsearch/elasticsearch:7.17.9
          resources:
            requests:
              cpu: 100m
              memory: 850Mi
          ports:
            - containerPort: 9200
              name: 9200-tcp
              protocol: TCP
            - containerPort: 9300
              name: 9300-com
              protocol: TCP
          # Ready once this node's Elasticsearch answers; does not wait for shard recovery.
          readinessProbe:
            httpGet:
              path: /_cluster/health?local=true
              port: 9200
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - name: data
              mountPath: /usr/share/elasticsearch/data
            - name: config
              mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
              subPath: elasticsearch.yml
            # - name: backup
            #   mountPath: /backups
  volumeClaimTemplates:
    - metadata:
        name: data
        labels:
          name: elastic-data
          part-of: tno
          component: elastic
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: netapp-block-standard
        resources:
          requests:
            storage: 3Gi
